--- a/lohost/lohost.Client.Services/lohost.Client.Services.csproj
+++ b/lohost/lohost.Client.Services/lohost.Client.Services.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\lohost.Client.Logging\lohost.Client.Logging.csproj" />
     <ProjectReference Include="..\lohost.Client.Models\lohost.Client.Models.csproj" />
+    <ProjectReference Include="..\lohost.Models\lohost.Models.csproj" />
   </ItemGroup>
 
 </Project>
