--- a/lohost/lohost.API/lohost.API.csproj
+++ b/lohost/lohost.API/lohost.API.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\lohost.API.Models\lohost.API.Models.csproj" />
+    <ProjectReference Include="..\lohost.API.Request\lohost.API.Request.csproj" />
+    <ProjectReference Include="..\lohost.API.Response\lohost.API.Response.csproj" />
     <ProjectReference Include="..\lohost.Logging\lohost.Logging.csproj" />
     <ProjectReference Include="..\lohost.Models\lohost.Models.csproj" />
   </ItemGroup>
