adding server pathing

--- a/lohost/lohost.API/lohost.API.csproj
+++ b/lohost/lohost.API/lohost.API.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\lohost.API.Helpers\lohost.API.Helpers.csproj" />
+    <ProjectReference Include="..\lohost.API.Models\lohost.API.Models.csproj" />
     <ProjectReference Include="..\lohost.API.Request\lohost.API.Request.csproj" />
     <ProjectReference Include="..\lohost.API.Response\lohost.API.Response.csproj" />
     <ProjectReference Include="..\lohost.Logging\lohost.Logging.csproj" />
