--- a/lohost/lohost.API/lohost.API.csproj
+++ b/lohost/lohost.API/lohost.API.csproj
@@ -16,7 +16,7 @@
     <ProjectReference Include="..\lohost.API.Models\lohost.API.Models.csproj" />
     <ProjectReference Include="..\lohost.API.Request\lohost.API.Request.csproj" />
     <ProjectReference Include="..\lohost.API.Response\lohost.API.Response.csproj" />
-    <ProjectReference Include="..\lohost.Logging\lohost.Logging.csproj" />
+    <ProjectReference Include="..\lohost.Logging\lohost.API.Logging.csproj" />
     <ProjectReference Include="..\lohost.Models\lohost.Models.csproj" />
   </ItemGroup>
 
