Adding request size limiting

--- a/lohost/lohost.API/appsettings.json
+++ b/lohost/lohost.API/appsettings.json
@@ -1,5 +1,6 @@
 {
   "Hosting": {
+    "MaxResponseSizeMB": "1", // This is the maximum size of the document that can be served. 1MB for the main site as sharing is caring. Not having anything makes it unlimited
     "Location": "localhost:7035"
   }
 }
