bug fixing for hosting

--- a/lohost/lohost.API/appsettings.json
+++ b/lohost/lohost.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Hosting": {
     "MaxResponseSizeMB": "1", // This is the maximum size of the document that can be served. 1MB for the main site as sharing is caring. Not having anything makes it unlimited
-    "Location": "localhost:7035"
+    "InternalURL": "https://localhost:8080", // Used for listening internall for the website
+    "ExternalURL": "https://localhost:8080" // The external URL that is used for determining subdmain requests
   }
 }
